@@ -678,6 +678,12 @@ public:
     virtual HRESULT STDMETHODCALLTYPE transparent(
         /* [out, retval] */ BOOL* transparent);
 
+    virtual HRESULT STDMETHODCALLTYPE setDefersCallbacks(
+        /* [in] */ BOOL defersCallbacks);
+
+    virtual HRESULT STDMETHODCALLTYPE defersCallbacks(
+        /* [out, retval] */ BOOL* defersCallbacks);
+
     // WebView
     WebCore::Page* page();
     bool handleMouseEvent(UINT, WPARAM, LPARAM);
